try to restruct the jobs route
