# utils/swagger/3_simple/models/list.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// List list
+// swagger:model list
+type List struct {
+
+	// amount of jobs
+	// Read Only: true
+	Count int64 `json:"count,omitempty"`
+
+	// next result
+	Next string `json:"next,omitempty"`
+
+	// previous result
+	Previous string `json:"previous,omitempty"`
+
+	// results
+	Results ListResults `json:"results"`
+}
+
+// Validate validates this list
+func (m *List) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *List) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *List) UnmarshalBinary(b []byte) error {
+	var res List
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
